# Evraz2.0_FoxhoundTeam

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py  predictor.py
backend/app/database/: __init__.py  message.py  prediction.py
backend/app/routers/: __init__.py  message.py  prediction.py
backend/app/services/: consumer.py  message.py  prediction.py
compose/frontend/: Dockerfile
frontend/: package.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: ExhausterView.vue  MainView.vue  PlotView.vue
predictor/: predictor.py  workspace.ipynb
