[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Petrov Anton <antonp2@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
beanie = "^1.17.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
ipython = "^8.5.0"
kafka-python = "^2.0.2"
aiokafka = "^0.8.0"
loguru = "^0.6.0"
numpy = "^1.24.2"
dateparser = "^1.1.7"
statsmodels = "^0.13.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
ruff = "^0.0.247"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
